--- a/Apps/W1/HybridGP/app/app.json
+++ b/Apps/W1/HybridGP/app/app.json
@@ -1,13 +1,13 @@
 {
-    "id":  "feeb3504-556e-4790-b28d-a2b9ce302d81",
-    "name":  "Dynamics GP Intelligent Cloud",
+    "id":  "334ef79e-547e-4631-8ba1-7a7f18e14de6",
+    "name":  "Business Central Intelligent Cloud",
     "publisher":  "Microsoft",
-    "brief":  "This extension will allow you to set up data migration from your Dynamics GP companies to your Dynamics 365 Business Central tenant through a wizard.",
-    "description":  "This extension will take you through the process to migrate data from your Dynamics GP on-premises solution to your Dynamics 365 Business Central cloud tenant.  This will enable you to take advantage of what the cloud has to offer your business such as, enhanced insights into your business, artificial intelligence, multiple device access, and anytime, anywhere access.",
-    "version":  "19.4.35398.36119",
+    "brief":  "This extension will take you through the process to configure your Cloud Migration environment.",
+    "description":  "This extension will take you through the process to configure and manage your Cloud Migration environment.  Once your Cloud Migration environment is configured, you will be able to manage data migrations from your on-premises solution to your Dynamics 365 Business Central cloud tenant.",
+    "version":  "20.0.0.0",
     "privacyStatement":  "https://go.microsoft.com/fwlink/?LinkId=724009",
     "EULA":  "https://go.microsoft.com/fwlink/?linkid=2009120",
-    "help":  "https://go.microsoft.com/fwlink/?linkid=2009037",
+    "help":  "https://go.microsoft.com/fwlink/?linkid=2009119",
     "url":  "https://go.microsoft.com/fwlink/?LinkId=724011",
     "contextSensitiveHelpUrl":  "https://go.microsoft.com/fwlink/?linkid=2115702",
     "logo":  "ExtensionLogo.png",
@@ -16,24 +16,18 @@
                              "id":  "58623bfa-0559-4bc2-ae1c-0979c29fd9e0",
                              "name":  "Intelligent Cloud Base",
                              "publisher":  "Microsoft",
-                             "version":  "19.4.0.0"
-                         },
-                         {
-                             "id":  "c526b3e9-b8ca-4683-81ba-fcd5f6b1472a",
-                             "name":  "Sales and Inventory Forecast",
-                             "publisher":  "Microsoft",
-                             "version":  "19.4.0.0"
+                             "version":  "20.0.0.0"
                          }
                      ],
     "screenshots":  [
 
                     ],
-    "platform":  "19.0.0.0",
-    "resourceExposurePolicy":  {
-                                   "allowDebugging":  false,
-                                   "allowDownloadingSource":  true,
-                                   "includeSourceInSymbolFile":  true
-                               },
+    "platform":  "20.0.0.0",
+    "resourceExposurePolicy": {
+        "allowDebugging": false,
+        "allowDownloadingSource": true,
+        "includeSourceInSymbolFile": true
+    },
     "target":  "OnPrem",
-    "application":  "19.4.0.0"
+    "application":  "20.0.0.0"
 }
