--- a/Apps/W1/DynamicsGPHistoricalTransactions/app.json
+++ b/Apps/W1/DynamicsGPHistoricalTransactions/app.json
@@ -3,8 +3,8 @@
   "name": "Dynamics GP Historical Transactions",
   "publisher": "Microsoft",
   "version": "21.3.0.0",
-  "brief": "This extension adds the ability to retain historical Dynamics GP transactions during a data migration.",
-  "description": "This extension adds the ability to retain historical Dynamics GP transactions during a data migration.",
+  "brief": "This extension adds the necessary components to retain historical Dynamics GP transactions after a data migration. Do NOT uninstall after a data migration or you will lose those transactions.",
+  "description": "This extension adds the necessary components to retain historical Dynamics GP transactions after a data migration. Do NOT uninstall after a data migration or you will lose those transactions.",
   "privacyStatement": "https://go.microsoft.com/fwlink/?LinkId=724009",
   "EULA": "https://go.microsoft.com/fwlink/?linkid=2009120",
   "help": "https://go.microsoft.com/fwlink/?linkid=2009037",
